--- a/src/co/edu/udea/mantpriorivias/Aplicacion.form
+++ b/src/co/edu/udea/mantpriorivias/Aplicacion.form
@@ -25,6 +25,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemDescargarPlantillaActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="menuItemDescargarAlternativasIntervencion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Descargar alternativas de intervencion"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemDescargarAlternativasIntervencionActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="menuAyuda">
