--- a/src/co/edu/udea/mantpriorivias/CostosMantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/CostosMantenimientoJDialog.form
@@ -118,7 +118,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="15" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Mantenimiento y Priorizaci&#xf3;n de V&#xed;as"/>
+        <Property name="text" type="java.lang.String" value="Priorizaci&#xf3;n y Mantenimiento de V&#xed;as"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="labelIngresoInfo">
