--- a/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
@@ -343,6 +343,10 @@
     <Component class="javax.swing.JTextField" name="presupuestoActualTextField">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" id="black" palette="1" red="0" type="palette"/>
+        </Property>
+        <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="presupuestoActualLabel">
