--- a/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/MantenimientoJDialog.form
@@ -17,6 +17,26 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="abrirAlternativasIntervencionMenuItemActionPerformed"/>
               </Events>
             </MenuItem>
+            <Menu class="javax.swing.JMenu" name="exportarMenu">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Exportar"/>
+              </Properties>
+              <SubComponents>
+                <MenuItem class="javax.swing.JMenuItem" name="txtMenuItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="TXT"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMenuItemActionPerformed"/>
+                  </Events>
+                </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="docxMenuItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Docx"/>
+                  </Properties>
+                </MenuItem>
+              </SubComponents>
+            </Menu>
           </SubComponents>
         </Menu>
       </SubComponents>
