--- a/src/co/edu/udea/mantpriorivias/PriorizacionMantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/PriorizacionMantenimientoJDialog.form
@@ -16,6 +16,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Abrir alternativas intervenci&#xf3;n"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="abrirAlternativasIntervencionMenuItemActionPerformed"/>
+              </Events>
             </MenuItem>
             <Menu class="javax.swing.JMenu" name="exportarMenu">
               <Properties>
