Adición de funcionalidad para guardar progreso
* Se adiciona funcionalidad que permite guardar toda la información que el usuario lleva hasta el momento. Únicamente está disponible en la pantalla de priorización.
* Se implementa Serialization en todas aquellas entidades que intervienen en el proceso de guardado de progreso.
* Se adicional funcionalidades para guardar y cargar archivo *.ser

--- a/src/co/edu/udea/mantpriorivias/Inicio.form
+++ b/src/co/edu/udea/mantpriorivias/Inicio.form
@@ -17,6 +17,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemCargarArchivoActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="cargarProgresoMenuItem">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Cargar progreso"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cargarProgresoMenuItemActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemDescargarPlantilla">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Descargar plantilla"/>
