Mejora en manejo de valores
* Se agrega como utilidades métodos para formatear números, ya sea para ser mostrados como para trabajarlos como valores
* Se formatean todos los valores en los lugares requeridos.

--- a/src/co/edu/udea/mantpriorivias/CostosMantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/CostosMantenimientoJDialog.form
@@ -26,13 +26,16 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="32" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="labelTitulo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="252" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <Component id="scrollPaneTabla" min="-2" pref="722" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                  <Component id="notaDecimalesLabel" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="labelTitulo" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="252" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Component id="scrollPaneTabla" min="-2" pref="722" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
           </Group>
@@ -43,7 +46,7 @@
                       <Component id="labelIngresoInfo" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="355" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="354" max="-2" attributes="0"/>
                       <Component id="botonSiguiente" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -59,10 +62,12 @@
               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Component id="labelIngresoInfo" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="scrollPaneTabla" pref="225" max="32767" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="scrollPaneTabla" pref="219" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+              <Component id="notaDecimalesLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="botonSiguiente" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -133,6 +138,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonSiguienteActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="notaDecimalesLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Nota: Recuerde que los valores decimales van separados por coma: 15,7"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
