--- a/src/co/edu/udea/mantpriorivias/PriorizacionMantenimientoJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/PriorizacionMantenimientoJDialog.form
@@ -424,6 +424,9 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cantidadMantenimientoTextFieldActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="aplicarMantenimientoButton">
               <Properties>
