Refactoring de nombres apropiados

--- a/src/co/edu/udea/mantpriorivias/gui/PriorizacionIntervencionesJDialog.form
+++ b/src/co/edu/udea/mantpriorivias/gui/PriorizacionIntervencionesJDialog.form
@@ -446,11 +446,6 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="aplicarMejorasButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="159" max="-2" attributes="0"/>
-                  </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -479,6 +474,11 @@
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jSeparator1" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
+                      <Component id="aplicarMejoramientosButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -529,7 +529,7 @@
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="aplicarMejorasButton" min="-2" max="-2" attributes="0"/>
+                      <Component id="aplicarMejoramientosButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -623,13 +623,13 @@
             </Component>
             <Component class="javax.swing.JTextField" name="cantidadEstabilizacionAfirmadosTextField">
             </Component>
-            <Component class="javax.swing.JButton" name="aplicarMejorasButton">
+            <Component class="javax.swing.JButton" name="aplicarMejoramientosButton">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Aplicar Mejora(s)"/>
+                <Property name="text" type="java.lang.String" value="Aplicar Mejoramiento(s)"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aplicarMejorasButtonActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aplicarMejoramientosButtonActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JSeparator" name="jSeparator1">
